/* 
  Localizable.strings
  TrolleyTracker

  Created by Austin Younts on 7/30/17.
  Copyright © 2017 Code For Greenville. All rights reserved.
*/


// Generic
"Generic.Error.Title" = "Error";
"Generic.Button.OK" = "OK";

// Tab Bar
"Map.Title" = "Map";
"Schedule.Title" = "Schedule";
"More.Title" = "More";

// Map View
"Message.Searching" = "Hang tight. Searching for active Trolleys...";
"Message.NoTrolleys" = "No Trolleys are being tracked right now.\nView the Schedule to see run times and select a route to preview it on the map.";
"Message.Disclaimer" = "To ensure safety, passengers are restricted to board and exit the trolley at designated trolley stops.";
"Message.Error.NoUserLocation" = "We're sorry, we can't find your current location right now.";

// Detail View
"Detail.Button.Directions" = "Get Directions";
"Detail.Button.WalkingTime" = "Get Walking Time";
"Detail.Label.Title" = "Trolly or Stop Name";

// Schedule View
"Schedule.Type.Day" = "By Day";
"Schedule.Type.Route" = "By Route";

// More View

"More.Title.General" = "General";
"More.Item.Feedback" = "Feedback";
"More.Item.Share" = "Tell Friends";
"More.Item.Share.Title" = "Check out the Trolley Tracker app!";
"More.Item.Share.URL" = "http://yeahthattrolley.com";
"More.Item.Acknowledgements" = "Acknowledgements";
"More.Item.About" = "About";

"OpenSource.Title" = "TrolleyTracker is created and maintained by Code for Greenville, more information can be found at http://trackthetrolley.com \n\nTrolleyTracker is open source software that can be found at https://github.com/codeforgreenville";

"Attribution.Title" = "TrolleyTracker has benefited from the following open source software.";

"Feedback.Title" = "TrolleyTracker Feedback";
"Feedback.Message" = "Hi TrolleyTracker team,\n\nI have some feedback to provide about the TrolleyTracker app:\n\n";
"Feedback.Error.NoMail" = "No email accounts are available on this device.";


